--- a/.env-example
+++ b/.env-example
@@ -1,5 +1,10 @@
-DB_HOST=localhost
+DATABASE_HOST=localhost
 DB_NAME=db
 DB_USER=postgres
 DB_PASS=admin1234
-DB_PORT=5432
+DATABASE_PORT=5432
+
+
+POSTGRES_DB=postgres
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
