--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,40 @@
 services:
+
+  fastapi:
+    tty: true
+    stdin_open: true
+    build:
+      context: .
+      dockerfile: Dockerfile.dev
+    environment:
+      - PIP_DEFAULT_TIMEOUT=100
+      - DATABASE=postgres
+      - POSTGRES_DB=postgres
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_PORT=5432
+      - POSTGRES_HOST=db
+    env_file:
+      - ./.env
+    ports:
+      - '8001:8001'
+    volumes:
+      - ./app:/project_fastapi/app
+      - ${HOME}/.aws:/home/user/.aws:ro
+      - ${HOME}/.gitconfig:/home/user/.gitconfig:ro
+      - ${HOME}/.ssh:/home/user/.ssh:ro
+    depends_on:
+      - db
+    networks:
+      - local
+
   db:
     image: postgres:13.3
     environment:
       POSTGRES_DB: postgres
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
+    command: postgres -c log_statement=all
     volumes:
       - dev-db-data:/var/lib/postgresql/data
     ports:
