test: add test category

--- a/.env-example
+++ b/.env-example
@@ -1,6 +1,6 @@
 DATABASE_HOST=localhost
-DB_NAME=db
-DB_USER=postgres
+DATABASE_NAME=db
+DATABASE_USER=postgres
 DB_PASS=admin1234
 DATABASE_PORT=5432
 
