--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,7 @@ services:
       - '8001:8001'
     volumes:
       - ./app:/project_fastapi/app
+      - ./alembic:/project_fastapi/alembic
       - ${HOME}/.aws:/home/user/.aws:ro
       - ${HOME}/.gitconfig:/home/user/.gitconfig:ro
       - ${HOME}/.ssh:/home/user/.ssh:ro
