--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,6 +8,19 @@
             "module": "uvicorn",
             "args": ["app.main:app", "--reload", "--port", "8001"],
             "console": "integratedTerminal"
-        }
+        },
+        {
+            "name": "Pytest local",
+            "type": "python",
+            "request": "launch",
+            "module": "pytest",
+            // linux
+            "args": [
+                "${workspaceFolder}",
+                "-vv",
+                "-s"
+            ],
+            "justMyCode": true
+        },
     ]
 }
