--- a/.env-example
+++ b/.env-example
@@ -8,3 +8,13 @@ DATABASE_PORT=5432
 POSTGRES_DB=postgres
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
+
+
+## Github
+
+DATABASE_HOST=db
+DATABASE_NAME=postgres
+DATABASE_USER=postgres
+DATABASE_PASSWORD=postgres
+DATABASE_PORT=5432
+ENVIRONMENT=local
