fix: install requirements Dockerfile common

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # sonar
 .scannerwork/
-
+Develop.env
 layer_dependencies_basic/python
 layer_dependencies_basic.zip
 layer_dependencies_boto/python
